plang/testing/logs/false-incorrect/109/program109.p.p
vKgS (zbaE (l8 vd Q2 m8w bioB5) (xZUQ4 (Jm))) (I6SJj) (lqu (HMTX5)) xoP :- (l XU9z dCmUy Dd8yX I); fqBTV (V); q Am (EP77J), zYG (S) (k yR6CC) FgqbZ; (cLmH s (eKNGq FYwnW) (Pkz) (af (eobc z2E otAQT) (N98P) (onil) (Qyx))), ((im (g Y7CQ pm6 (VI) (SO)) (uz7gG pKzY1 Tt9pc Kf b3za) Qi3D)), n7ts.

ay1.

wIhX H (KUfe9) C Jq83Y :- (vKBu C (a9xU3 (ZcK) (uNkP2 (N) (CdA) tci (gGjq1 (JS) (TTYiv) (E) b))); (((aB8 (sPw TCZ tJPCW (s) (VBKa)) (RXNrw) ogrK xo)))).
mt z (up N0 Sgej (pA9 (El6) (Xg3)) (hS7 (bPSDj (tW (n) (yK))))) (IRSrf) (md (ihD DbFN)) :- (qQ02), fmPV7; x (RTcs), lgM (lU (gaXD eKu5 (nfUWi) M5XDK (S)) t4 r00K6 (pxKdr)) yBU9 (GbDzj) gZGP; (iD), t GAU rhfx s (p9x d7aQ); zL3K aE4; wxma J eBL, dz9 X (C13Bu) (YC6Q) gaDFJ; qnXQ.


pRv veQw (quFOb (QD) P7yJi) (Fh) :- (qy4 BYu8x (MRP) (r (Vt) (IKc)), o0 HBxq; mgUUJ Shl4 nWwX4; saQma sz (Ych8q) (QCDwt) (Xueoj); (dD; sl ZKUv (kS1h) (Eg0R))), d0 (QUXs), p UHY, tnMMP (Wy); jmH VK x50qN (Tin) (f0jL); pfjs8 hXQ2S (R8e5j), l.

zx iPj qVx5U (Qep8Z) (IoUY).

t j7E :- u; (eS (n yxE6) (uXv (Kne) (zFkbh D1p3 (sLYo T8sM (QmZs) CqQ) (tA mIYf (Yak4) qo (M))))), h (j1oii (x cVJeR Ehc5k) (C) HeyR) (KBV); j bT ZvwUA (m) (Zz); m Hp; (qPaW vxAd1 (KqWZ4) hSIN, gW (onpF) (cD) (E2x); (j (CncR) (OJ) (pCB dTEm SD) WGkV)).

uZ cQ YhnvE (xuVW) gTLr0 :- ((b (gV (oZ zMAC (im)) (xuFqh (RfH) (oog do (FX) wbhXy QfeaA) (lN p IqR (d) aZ9NG) V1) (WP3)) (gOqt rWuKX (k8 (OPm) W) rgz (IDA)) r RTt; (hbjNm), (wb7w a32g))).


mz8xn (tTcnA Q6 y (MRMb1) zQ) L1K D9x.


a (R1AZ) (X7P) (t (TayM) T O1Nkp (F1Y)).
? rIDlR (uF l1Ct (FXp) qHTw), x GSjAX Cg2y (fsj (D) c p (Mam)) V; uEH7 WoTq6 XGMl6 u, (dlved nbN JDQ).
